test/negative/FinalField.java
public class FinalField {
    public FinalField() {}
    final int x;
}
